--- a/css/views/index.css
+++ b/css/views/index.css
@@ -219,11 +219,13 @@
 
 .stage-playbill .btn-home{position: absolute; right: .4rem; top: .4rem;}
 .stage-playbill .word-playbill_title{position: absolute; left: 50%; bottom: .26rem;}
-.stage-playbill .swiper-container{width: 4.86rem; height: 7.12rem;}
+.stage-playbill .swiper-container{width: 4.86rem; height: 7.12rem; opacity: 0;}
 .stage-playbill img{display: block; width: 100%; height: 100%;}
 .stage-playbill .swiper-container{
   box-shadow: .1rem .1rem .1rem rgba(0, 0, 0, .18);
 }
+.stage-playbill .swiper-button-next,
+.stage-playbill .swiper-button-prev{display: none;}
 
 #template{
   -webkit-transform-origin: left top;
