--- a/css/public/common.css
+++ b/css/public/common.css
@@ -437,6 +437,7 @@ textarea{resize:none;}
 .icon-member{width: .24rem; height: .24rem; background-image: url(http://cdn.nabaiji.yuncoupons.com/images/icon-member.png);}
 .icon-checked{width: .24rem; height: .24rem; background-image: url(http://cdn.nabaiji.yuncoupons.com/images/icon-checked.png);}
 .icon-love{width: .54rem; height: .5rem; background-image: url(http://cdn.nabaiji.yuncoupons.com/images/btn-vote_disable.png);}
+.icon-unlove{width: .54rem; height: .5rem; background-image: url(http://cdn.nabaiji.yuncoupons.com/images/btn-vote.png);}
 
 /* BTNS */
 .btns{display: block; position: relative; cursor: pointer; border: none; background-repeat: no-repeat; background-position: 0 0; text-indent: -99rem; background-size: 100% 100%;}
