解决： 1. 更新 照片墙文案

--- a/css/public/common.css
+++ b/css/public/common.css
@@ -481,6 +481,7 @@ textarea{resize:none;}
 .word-wall_title{width: 2.78rem; height: .38rem; background-image: url(http://cdn.nabaiji.yuncoupons.com/images/word-wall_title.png);}
 .word-playbill_title{width: 4.74rem; height: .82rem; background-image: url(http://cdn.nabaiji.yuncoupons.com/images/word-playbill_title.png);}
 .word-playbill_title2{width: 5.02rem; height: .36rem; background-image: url(http://cdn.nabaiji.yuncoupons.com/images/word-playbill_title2.png);}
+.word-playbill_title3{width: 5.08rem; height: .84rem; background-image: url(http://cdn.nabaiji.yuncoupons.com/images/word-playbill_title3.png);}
 .word-tips_upload{width: 2.38rem; height: .48rem; background-image: url(http://cdn.nabaiji.yuncoupons.com/images/word-tips_upload.png);}
 .word-loading_title{width: 2.7rem; height: 1.3rem; background-image: url(http://cdn.nabaiji.yuncoupons.com/images/word-loading_title.png);}
 .word-create_title{width: 2.7rem; height: 1.3rem; background-image: url(http://cdn.nabaiji.yuncoupons.com/images/word-create_title.png);}
