--- a/css/public/common.css
+++ b/css/public/common.css
@@ -478,10 +478,10 @@ textarea{resize:none;}
 .word-theme_underwater{width: 1.74rem; height: .42rem; background-image: url(http://cdn.nabaiji.yuncoupons.com/images/theme-underwater_word.png);}
 .word-photo_tips{width: 2.64rem; height: .88rem; background-image: url(http://cdn.nabaiji.yuncoupons.com/images/word-photo_tips.png);}
 .word-save_title{width: 4.18rem; height: .38rem; background-image: url(http://cdn.nabaiji.yuncoupons.com/images/word-save_title.png)}
+.word-save_title2{width: 5.08rem; height: .84rem; background-image: url(http://cdn.nabaiji.yuncoupons.com/images/word-playbill_title3.png);}
 .word-wall_title{width: 2.78rem; height: .38rem; background-image: url(http://cdn.nabaiji.yuncoupons.com/images/word-wall_title.png);}
 .word-playbill_title{width: 4.74rem; height: .82rem; background-image: url(http://cdn.nabaiji.yuncoupons.com/images/word-playbill_title.png);}
 .word-playbill_title2{width: 5.02rem; height: .36rem; background-image: url(http://cdn.nabaiji.yuncoupons.com/images/word-playbill_title2.png);}
-.word-playbill_title3{width: 5.08rem; height: .84rem; background-image: url(http://cdn.nabaiji.yuncoupons.com/images/word-playbill_title3.png);}
 .word-tips_upload{width: 2.38rem; height: .48rem; background-image: url(http://cdn.nabaiji.yuncoupons.com/images/word-tips_upload.png);}
 .word-loading_title{width: 2.7rem; height: 1.3rem; background-image: url(http://cdn.nabaiji.yuncoupons.com/images/word-loading_title.png);}
 .word-create_title{width: 2.7rem; height: 1.3rem; background-image: url(http://cdn.nabaiji.yuncoupons.com/images/word-create_title.png);}
