--- a/css/views/photo.css
+++ b/css/views/photo.css
@@ -182,7 +182,7 @@
 .stage-wall .wall-item dl{width: 100%; height: .86rem; padding: 0 .1rem;}
 .stage-wall .wall-item dl,
 .stage-wall .wall-item dt,
-.stage-wall .wall-item dd{
+.stage-wall .wall-item dd a{
   display: -webkit-box;
   display: -webkit-flex; 
   display: -moz-flex;
@@ -203,7 +203,7 @@
   -webkit-justify-content: space-between;
   justify-content: space-between;
 }
-.stage-wall .wall-item dd{
+.stage-wall .wall-item dd a{
   -webkit-box-pack: end;
   box-pack: end;
   -webkit-flex-pack: end;
