--- a/css/public/common.css
+++ b/css/public/common.css
@@ -438,6 +438,9 @@ textarea{resize:none;}
 .icon-checked{width: .24rem; height: .24rem; background-image: url(http://cdn.nabaiji.yuncoupons.com/images/icon-checked.png);}
 .icon-love{width: .54rem; height: .5rem; background-image: url(http://cdn.nabaiji.yuncoupons.com/images/btn-vote_disable.png);}
 .icon-unlove{width: .54rem; height: .5rem; background-image: url(http://cdn.nabaiji.yuncoupons.com/images/btn-vote.png);}
+.icon-prize_1{width: .76rem; height: .7rem; background-image: url(http://cdn.nabaiji.yuncoupons.com/images/icon-prize_1.png);}
+.icon-prize_2{width: .74rem; height: .7rem; background-image: url(http://cdn.nabaiji.yuncoupons.com/images/icon-prize_2.png);}
+.icon-prize_3{width: .74rem; height: .7rem; background-image: url(http://cdn.nabaiji.yuncoupons.com/images/icon-prize_3.png);}
 
 /* BTNS */
 .btns{display: block; position: relative; cursor: pointer; border: none; background-repeat: no-repeat; background-position: 0 0; text-indent: -99rem; background-size: 100% 100%;}
@@ -467,6 +470,7 @@ textarea{resize:none;}
 .btn-vote_disable{width: .54rem; height: .5rem; background-image: url(http://cdn.nabaiji.yuncoupons.com/images/btn-vote_disable.png);}
 .btn-get{width: 2.5rem; height: .88rem; background-image: url(http://cdn.nabaiji.yuncoupons.com/images/btn-get.png);}
 .btn-pop_confirm{width: 2.72rem; height: .88rem; background-image: url(http://cdn.nabaiji.yuncoupons.com/images/btn-confirm.png);}
+.btn-pop_get{width: 2.4rem; height: .92rem; background-image: url(http://cdn.nabaiji.yuncoupons.com/images/btn-pop_get.png);}
 
 /* WORDS */
 .words{display: block; position: relative; border: none; background-repeat: no-repeat; background-position: 0 0; text-indent: -99rem; background-size: 100% 100%;}
@@ -503,6 +507,14 @@ textarea{resize:none;}
 .word-form_province{width: .26rem; height: .3rem; background-image: url(http://cdn.nabaiji.yuncoupons.com/images/word-form_province.png);}
 .word-form_city{width: .24rem; height: .3rem; background-image: url(http://cdn.nabaiji.yuncoupons.com/images/word-form_city.png);}
 .word-form_storename{width: 1.24rem; height: .3rem; background-image: url(http://cdn.nabaiji.yuncoupons.com/images/word-form_storename.png);}
+.word-prize_title1{width: 3.86rem; height: .68rem; background-image: url(http://cdn.nabaiji.yuncoupons.com/images/word-prize_title1.png);}
+.word-prize_title2{width: 3.86rem; height: .68rem; background-image: url(http://cdn.nabaiji.yuncoupons.com/images/word-prize_title2.png);}
+.word-prize_title3{width: 3.86rem; height: .68rem; background-image: url(http://cdn.nabaiji.yuncoupons.com/images/word-prize_title3.png);}
+.word-prize_desc1{width: 4.36rem; height: .4rem; background-image: url(http://cdn.nabaiji.yuncoupons.com/images/word-prize_desc1.png);}
+.word-prize_desc2{width: 3.46rem; height: .4rem; background-image: url(http://cdn.nabaiji.yuncoupons.com/images/word-prize_desc2.png);}
+.word-prize_desc3{width: 5.18rem; height: .4rem; background-image: url(http://cdn.nabaiji.yuncoupons.com/images/word-prize_desc3.png);}
+.word-prize_tips{width: 3.8rem; height: .94rem; background-image: url(http://cdn.nabaiji.yuncoupons.com/images/word-prize_tips.png);}
+.word-prize_desc3{width: 5.18rem; height: .4rem; background-image: url(http://cdn.nabaiji.yuncoupons.com/images/word-prize_desc3.png);}
 
 /* POP */
 .pop{display: none; position: fixed; left: 0; right: 0; top: 0; bottom: 0; z-index: 1000; background-color: rgba(0, 0, 0, .8); opacity: 0;}
@@ -734,6 +746,13 @@ textarea{resize:none;}
 }
 .pop-form .form-select select{position: absolute; left: 0; top: 0; width: 100%; height: 100%; opacity: 0;}
 .pop-form .form-select span{white-space: nowrap;}
+
+.pop-prize{overflow: hidden; width: 6rem; height: 5.4rem; border-radius: .1rem; background-color: #e7eef8;}
+.pop .pop-prize_box{width: 100%; height: 100%;}
+.pop-prize h3,
+.pop-prize h4{display: none;}
+.pop-prize h4{margin: .3rem 0 .6rem;}
+.pop-prize .btn-pop_get{margin-top: .5rem;}
 
 /* FORM */
 
