--- a/css/public/common.css
+++ b/css/public/common.css
@@ -438,9 +438,9 @@ textarea{resize:none;}
 .icon-checked{width: .24rem; height: .24rem; background-image: url(http://cdn.nabaiji.yuncoupons.com/images/icon-checked.png);}
 .icon-love{width: .54rem; height: .5rem; background-image: url(http://cdn.nabaiji.yuncoupons.com/images/btn-vote_disable.png);}
 .icon-unlove{width: .54rem; height: .5rem; background-image: url(http://cdn.nabaiji.yuncoupons.com/images/btn-vote.png);}
-.icon-prize_1{width: .76rem; height: .7rem; background-image: url(http://cdn.nabaiji.yuncoupons.com/images/icon-prize_1.png);}
-.icon-prize_2{width: .74rem; height: .7rem; background-image: url(http://cdn.nabaiji.yuncoupons.com/images/icon-prize_2.png);}
-.icon-prize_3{width: .74rem; height: .7rem; background-image: url(http://cdn.nabaiji.yuncoupons.com/images/icon-prize_3.png);}
+.icon-prize_1{width: 1.12rem; height: 1.02rem; background-image: url(http://cdn.nabaiji.yuncoupons.com/images/icon-prize_1.png);}
+.icon-prize_2{width: 1.12rem; height: 1.02rem; background-image: url(http://cdn.nabaiji.yuncoupons.com/images/icon-prize_2.png);}
+.icon-prize_3{width: 1.12rem; height: 1.02rem; background-image: url(http://cdn.nabaiji.yuncoupons.com/images/icon-prize_3.png);}
 
 /* BTNS */
 .btns{display: block; position: relative; cursor: pointer; border: none; background-repeat: no-repeat; background-position: 0 0; text-indent: -99rem; background-size: 100% 100%;}
@@ -514,7 +514,7 @@ textarea{resize:none;}
 .word-prize_desc2{width: 3.46rem; height: .4rem; background-image: url(http://cdn.nabaiji.yuncoupons.com/images/word-prize_desc2.png);}
 .word-prize_desc3{width: 5.18rem; height: .4rem; background-image: url(http://cdn.nabaiji.yuncoupons.com/images/word-prize_desc3.png);}
 .word-prize_tips{width: 3.8rem; height: .94rem; background-image: url(http://cdn.nabaiji.yuncoupons.com/images/word-prize_tips.png);}
-.word-prize_desc3{width: 5.18rem; height: .4rem; background-image: url(http://cdn.nabaiji.yuncoupons.com/images/word-prize_desc3.png);}
+.word-prize_tips3{width: 3.8rem; height: .94rem; background-image: url(http://cdn.nabaiji.yuncoupons.com/images/word-prize_tips3.png);}
 
 /* POP */
 .pop{display: none; position: fixed; left: 0; right: 0; top: 0; bottom: 0; z-index: 1000; background-color: rgba(0, 0, 0, .8); opacity: 0;}
@@ -651,7 +651,7 @@ textarea{resize:none;}
 .pop .pop-guide_photo img{display: block; width: 100%; height: 100%;}
 .pop .pop-guide .btn-pass{position: absolute; right: .8rem; bottom: 1rem;}
 
-.pop-form{overflow: hidden; width: 6.8rem; height: 9.8rem; padding-top: .6rem; border-radius: .2rem; background-color: #e7eef8;}
+.pop-form{overflow: hidden; width: 6.8rem; padding: .6rem 0; border-radius: .2rem; background-color: #e7eef8;}
 .pop .pop-form_box{width: 100%; height: 100%;}
 .pop-form dl{margin-bottom: .3rem;}
 .pop-form dl{
@@ -750,7 +750,8 @@ textarea{resize:none;}
 .pop-prize{overflow: hidden; width: 6rem; height: 5.4rem; border-radius: .1rem; background-color: #e7eef8;}
 .pop .pop-prize_box{width: 100%; height: 100%;}
 .pop-prize h3,
-.pop-prize h4{display: none;}
+.pop-prize h4,
+.pop-prize p{display: none;}
 .pop-prize h4{margin: .3rem 0 .6rem;}
 .pop-prize .btn-pop_get{margin-top: .5rem;}
 
